[tool.poetry]
name = "geekcamp-calculator"
version = "0.0.1.2"
description = "基于 ANTLR4 编写的 Python 计算器 DEMO"
authors = ["FifiLyu <fifilyu@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/geekcampchina/geekcamp-calculator"
repository = "https://github.com/geekcampchina/geekcamp-calculator"
documentation = "https://github.com/geekcampchina/geekcamp-calculator"

classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: System :: System Shells'
]

packages = [
    { include = "calculator" },
    { include = "gkcalculator.py" },
]

include = [
    "calculator/antlr4/*.py"
]

exclude = [
    "calculator/antlr4/.gitkeep"
]

[tool.poetry.dependencies]
python = ">=3.8.5 <4.0.0"
antlr4-tools = ">=0.2"
antlr4-python3-runtime = ">=4.13.1"
pytest = ">=7.4.1"
happy-python = ">=0.4.7"

[tool.poetry.scripts]
pycalculator = "gkcalculator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
